Hindi: main and whatsnew at 100%
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108591 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hi-IN/main.lang
+++ b/hi-IN/main.lang
@@ -1,9 +1,9 @@
 ;Navigation
-संचरण
+नेविगेशन
 
 
 ;Press area
-प्रेस एरिया
+प्रेस क्षेत्र
 
 
 ;About
@@ -11,7 +11,7 @@
 
 
 ;Store
-स्टोर
+भंडारित करें
 
 
 ;Donate
@@ -203,7 +203,7 @@ Mozilla.com देखें (अंग्रेज़ी में)
 
 
 ;MB
-MB
+MB {ok}
 
 
 ;MegaBytes
@@ -383,36 +383,34 @@ Ogg थियोरा प्रारूप
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+आप फ़ायरफ़ॉक्स के एक पुराने संस्करण का उपयोग कर रहे हैं. सुरक्षित रहने के लिए इसका अद्यतन करें! <br/> नवीनतम सुविधाओं, गति और बेहतर सुरक्षा के लिए एक मिनट से भी कम समय में <a href="%s"> मुक्त उन्नयन डाउनलोड करें</a>
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+आपको एक उन्नयन की जरूरत है! मात्र एक मिनट से भी कम समय में सुरक्षित रहें.<br/> नई फ़ायरफ़ॉक्स ब्राउज़िंग और वेब पर सबसे अच्छा ब्राउज़िंग और अनुकूलन के लिए अपने नई फ़ायरफ़ॉक्स का उपयोग करना प्रारंभ करें<br/>   यह तेज और मुफ़्त है!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+आप फ़ायरफ़ॉक्स के एक पुराने संस्करण का उपयोग कर रहे हैं सुरक्षित रहने के लिए <a Href="%s"> इसका अद्यतन </a> करें !<br/> नवीनतम सुविधाओं, सुरक्षा सुधारों और अभी तक सबसे तेज फ़ायरफ़ॉक्स का मजा लें. एक मिनट से भी कम समय में मुक्त उन्नयन डाउनलोड करें
 
 
 ;Upgrade now
-Upgrade now
+अभी अपग्रेड करें
 
 
 ;Update now
-Update now
+अभी अपडेट करें
 
 
 ;Supported Devices
-समर्थन भेटल युक्ति
+समर्थित युक्ति
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+नया क्या हैं
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+गोपनीयता
