--- a/hi-IN/whatsnew.lang
+++ b/hi-IN/whatsnew.lang
@@ -1,95 +1,95 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+हुर्रे! आपका फ़ायरफ़ॉक्स नवीनतम है.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+आपका फ़ायरफ़ॉक्स पुराना हो चुका है.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणों से, हम <a href="{url}">नवीनतम और सबसे बड़ी संस्करण तक उन्नयन करने की अनुशंसा करते हैं </a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+आप फ़ायरफ़ॉक्स के एक अज्ञात संस्करण को चला रहे हैं.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणों से, हम <a href="{url}">नवीनतम और सबसे बड़ी संस्करण तक डाउनलोड करने की अनुशंसा करते हैं </a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+अपने अगले कार्य करने के लिए <br/>पहले से कहीं ज्यादा तेजी से जाएँ 
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+फ़ायरफ़ॉक्स में नई सुविधाओं की मदद से आप तेजी से और अधिक कुशलता से ब्राउज़ करके देख सकते हैं.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">नया टैब सुविधा »</a> के बारे में और अधिक जानें 
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+<a href="{url}">पुनः डिज़ाइन किए गए मुख पृष्ठ »</a> के बारे में और अधिक जानें
 
 
 ;Keep in touch
-Keep in touch
+संपर्क में रहें
 
 
 ;Keep it moving
-Keep it moving
+इसे आगे बढ़ाते रहें
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+फ़ायरफ़ॉक्स पाएँ » <b>एंड्रायड के लिए</b>
 
 
 ;Keep it going
-Keep it going
+इसे बनाए रखें
 
 
 ;Join Mozilla
-Join Mozilla
+मोज़िल्ला से जुड़ें
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+बनाये गएन काम से Android रोबोट को पुनः निर्मित किया गया और <a href="%s"> गूगल द्वारा साझा किया गया और <a href="%s">  क्रिएटिव कॉमन्स 3.0 विशेषता लाइसेंस </a> में वर्णित शर्तों के अनुसार उपयोग किया जाना चहिए.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Android के लिए फ़ायरफ़ॉक्स प्राप्त करें</a>और अपने हाथ में वेब का लुफ्त उठायें. यह तेज, स्मार्ट और सुरक्षित है!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+अभी मोबाइल ब्राउज़र पायें जो आपका समर्थन कर सकें
 
 
 ;Firefox Features
-Firefox Features
+फ़ायरफ़ॉक्स सुविधाएँ
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+फ़ायरफ़ॉक्स में आपका स्वागत है
 
 
 ;Firefox Help
-Firefox Help
+फ़ायरफ़ॉक्स मदद
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+ Android कलाकृति के लिए फ़ायरफ़ॉक्स
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+तेज. स्मार्ट. सुरक्षित
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+मोबाइल ब्राउज़र पायें जो आपका समर्थन कर सकें
