[lt] Updating lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108678 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/main.lang
+++ b/lt/main.lang
@@ -408,11 +408,11 @@ Palaikomi įrenginiai
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Naujovės
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privatumas
 
 
