--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -62,11 +62,11 @@ Papuoškite savo „Firefox“ kaukėmis. Išbandykite kaukę, užvesdami pelę,
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Išbandykite šviežiausias naršyklės „Firefox“ naujoves dar prieš joms patenkant į Betą. <a href="%s">Parsisiųskite „Firefox Aurorą“.</a>
+Išbandykite šviežiausias naršyklės „Firefox“ naujoves dar prieš joms patenkant į betą. <a href="%s">Parsisiųskite „Firefox Aurorą“.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Parsisiųskite „Firefox Aurorą“</a>, testuokite naujoves ir padėkite mums nuspręsti, kurios jų pateks į Betą.
+<a href="%s">Parsisiųskite „Firefox Aurorą“</a>, testuokite naujoves ir padėkite mums nuspręsti, kurios jų pateks į betą.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
@@ -130,18 +130,18 @@ Sparti, labai sparti! <a %s>„Firefox“ naršyklė „Android“ įrenginiams 
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Džiaugatės „Firefox“ beta? <a href="%s">Pasiūlykite ją išbandyti</a> ir savo draugams!
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Aš naudojuosi „Firefox“ beta – taip sužinau apie šviežiausias netrukus „Firefox“ pasirodysiančias naujoves. <a href="%s">Išbandyk ir tu!</a>
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Dėkojame, kad naudojatės „Firefox“ beta ir prisidedate prie „Firefox“ tobulinimo. Siūlome <a href="%s">pakviesti ją išbandyti</a> ir savo draugus.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Aš naudojuosi „Firefox“ beta, padedu testuoti šviežiausias naujoves ir padedu ją tobulinti. <a href="%s">Prisidėk ir tu!</a>
 
 
