--- a/lt/whatsnew.lang
+++ b/lt/whatsnew.lang
@@ -46,7 +46,7 @@ Turėkite naršyklę su savimi
 
 
 ;Get Firefox » <b>for Android</b>
-Parsisiųskite „Firefox“ » <b>Android'ui</b>
+Parsisiųskite „Firefox“ » <b>Android’ams</b>
 
 
 ;Keep it going
@@ -54,7 +54,7 @@ Būkime kartu
 
 
 ;Join Mozilla
-Įsitraukite į „Mozillą“
+Įsijunkite į „Mozillą“
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
@@ -62,38 +62,38 @@ Būkime kartu
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Parsiųskite „Firefox“ „Android’ams“</a> ir nešiokitės visas saityno galias su savimi. Spartu, smagu, saugu!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Dabar parsisiųskite mobiliąją naršyklę, kuri nepamirš Jūsų saugumo
 
 
 ;Firefox Features
-Firefox Features
+„Firefox“ savybės
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Sveiki! Čia „Firefox“
 
 
 ;Firefox Help
-Firefox Help
+„Firefox“ žinynas
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+„Firefox“ „Android’ams“
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Sparti. Smagi. Saugi.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Parsisiųskite mobiliąją naršyklę, kuri nepamirš Jūsų saugumo.
 
 
