--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -131,6 +131,6 @@ Visi mobiliosios „Firefox“ kanalai »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Nemokamai iš „Google Play“ krautuvės
 
 
