Updated some translations.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108810 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/download.lang
+++ b/csb/download.lang
@@ -23,7 +23,7 @@ Dzãkùjemë za wëbranié Firefoksa!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-Zladënk sã zacznie za parã sekùńdów. Żlë ni, <a href="%s">klëkni tuwò</a>.
+Zladënk sã zacznie za parã sekùńdów. Żlë nié, <a href="%s">klëkni tuwò</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
