--- a/csb/firefoxtesting.lang
+++ b/csb/firefoxtesting.lang
@@ -34,21 +34,21 @@ Zladëjë Betã ë miéj cësk na przińdną wersjã Firefoksa.
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Wëpróbùjë nônowszé ùdobrzenia wëdajnotë, personalizacji ë bezpiékù, chtërné prawie że są fardich.
+Wëpróbùjë nônowszé ùdobrzenia wëdajnotë, personalizacji ë bezpiékù, chtërné tëli co są fardich.
 
 ;2. Refine &amp; Polish
 2. Ùdobrzë Firefoksa razã z nama
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-Sélôj nalazłë felë, bë pòdrëchtowac wëdajnotã ë fùnkcjonalnosc stabilnégò strzodowiska.
+Sélôj nalazłë felë, bë pòdrëchtowac wëdajnotã ë fùnkcjonalnotã stabilnégò strzodowiska.
 
 
 ;3. Do Your Part
-3. Robi swòje
+3. Zrobi swój dzél
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Miéj cësk na przińdną wersjã Firefoksa ë na 450 milionów brëkòwników, chtërni gò ùżëwają co dnia.
+Miéj cësk na przińdną wersjã Firefoksa ë na 450 milionów brëkòwników, chtërni ùżëwają gò co dnia.
 
 ;Supported devices
 Wspiéróné ùrządzenia
