--- a/csb/main.lang
+++ b/csb/main.lang
@@ -131,7 +131,7 @@ Zladënk - Darmôk
 
 
 ;Help us make Firefox even better!
-Pòmòzë nama robic jesz lepszégò Firefoksa!
+Pòmòzë nama zrobic jesz lepszégò Firefoksa!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
@@ -219,7 +219,7 @@ Widea
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Jeżlë nie je scwierdzoné <a href="%s">jinaczi</a>, zamkłosc ny stronë je na licencji<br /><a href="%s">Creative Commons Attribution Share-Alike v3.0</a> abò pózdniészi wersji.
+Chòba że je jinaczi scwierdzoné <a href="%s">jinaczi</a>, zamkłosc ny stronë je na licencji<br /><a href="%s">Creative Commons Attribution Share-Alike v3.0</a> abò pózdniészi wersji.
 
 
 ;Report Trademark Abuse
@@ -263,11 +263,11 @@ Fòrmat MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Ala! Ùgwësni so, ze môsz wpisóné dobri adres e-mailowi.
+Ala! Ùgwësni so, że môsz dokładno wpisóné adres e-mailowi.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Przeczëtôj Pòlitikã Priwatnoscë Mozillë ë zgòdzë sã z nią.
+Czëtôj Pòlitikã Priwatnoscë Mozillë ë zgòdzë sã z nią.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
@@ -287,7 +287,7 @@ Firefox je zaktualniony
 
 
 ;Journey to the Future with Firefox
-Réza w przińdnotã z Firefoksã
+Réza w przińdnotã Firefoksa
 
 
 ;Join the Beta Program
@@ -335,7 +335,7 @@ Wszëtczé systemë ë jãzëczi
 
 
 ;View Full Site
-Òbaczë fùl starnã
+Òbaczë całą stronã
 
 
 ;Get Firefox for Android
@@ -367,7 +367,7 @@ E-mail {ok}
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Wëdostónô nowô séc dlô XP.
+Mozilla Firefox. Wëdostiwô nową séc dlô XP.
 
 
 ;Super speed
@@ -383,23 +383,23 @@ Nôslédnészé technologie
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-Ùżëwôsz jesz starszi wersji Firefoksa. Dlô bezpiekù nót je ją zaktualnic! <br/> <a href="%s"> Zladëjë zaktualnienié - Darmôk</a> w czasu ktrótszim niżlë jednô minuta  bë zwëskac nônowszé fùnkcje, chùtkòsc ë ùdobrzony bezpiék.
+Môsz starą wersjã Firefoksa. Dlô bezpiekù nót je ją zaktualnic! <br/> <a href="%s"> Zladëjë zaktualnienié - Darmôk</a> w czasu ktrótszim niżlë jednô minuta  bë zwëskac nônowszé fùnkcje, chùtkòsc ë ùdobrzony bezpiék.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-Nót je zaktualnic! Pòprawi swój bezpiek w czasu krótszim niżle minuta. <br/> Zaczni ùżëwac nowi wersji Firefoksa dlô nôbëlniészégò ë dopasownégò przezéraniô sécë. <br/>  Chùtkò - ë za darmôk!
+Nót je zaktualnic! Pòprawi swój bezpiek w mni niżle minuta. <br/> Ùżëjë nową wersjã Firefoksa dlô nôbëlniészégò ë dopasownégò przezéraniô sécë. <br/>  Chùtkò - ë za darmôk!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Ùżëwôsz jesz starszi wersji Firefoksa. Zladëjë <a href="%s">zaktualnienié</a> dlô swòjégò bezpiekù! <br/> Pòczëjë nônowszé fùnkcje ë ùdobrzony bezpiek; jednym słowã: wëpróbùjë nôchùtczészégò Firefoksa jaczégò dało sã nama zrobic. Za darmôk, zaktualni swój przezérnik w czasu krótszim òd jedny minutë.
+Môsz starą wersjã Firefoksa. Zladëjë <a href="%s">zaktualnienié</a> dlô swòjégò bezpiekù! <br/> Pòczëjë nônowszé fùnkcje ë ùdobrzony bezpiek; jednym słowã: wëpróbùjë nôchùtczészégò Firefoksa jaczégò dało sã nama zrobic. Za darmôk, zaktualni swój przezérnik w czasu krótszim òd jedny minutë.
 
 
 ;Upgrade now
-Aktualizëje zarô
+Zaktualni
 
 
 ;Update now
-Aktualizëje zarô
+Zaktualni
 
 
 ;Supported Devices
