--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -22,11 +22,11 @@ Wëbiérzë krôj
 
 
 ;Whoops! Be sure to enter a valid email address.
-Ene! Bôczë bë wpisac prôwdzëwi adres e-mailowi.
+Ene! Bôczë bë pòprôwno wpisac adres e-mailowi.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Proszã przeczëtac Pòlitikã Priwatnoscë Mozillë ë zaklëknąc pòle zgòdë.
+Proszã, przeczëtôj Pòlitikã Priwatnoscë Mozillë ë zaklëkni pòle zgòdë.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
@@ -38,7 +38,7 @@ Zapiszë mie!
 
 
 ;We will only send you Mozilla-related information.
-Bãdzemë blós sélac jinfòrmacje zrzeszoné z Mozillą.
+Bãdzemë le sélac jinfòrmacje zrzeszoné z Mozillą.
 
 
 ;Thanks for Subscribing!
@@ -50,11 +50,11 @@ Chcemë dzelëc sã tim, jak wëdostac nôwicy z Firefoksa. Dostaniesz téż wia
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Zapiszë sã na comiesãczné wiadła, żebë wiedzëc co je czëc w Mozillë, ë dowiedzëc sã ò nônowszich możlëwòtach wëdostaniégò wicy z Firefoksa. To je jidealnô fòrma ùtrzimaniô łączbë!
+Zapiszë sã na comiesãczné wiadła, żebë wiedzëc co je czëc w Mozillë, ë wëwiédzë sã ò nônowszich możlëwòtach wëdostaniégò wicy z Firefoksa. To je jidealnô spòsobnota ùtrzimaniô łączbë!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Mómë Cë wësłóné pòcwierdzenié e-mailã. Prosto, klëkni na dostóny lënk, ë pòcwierdzë subskripcjô na naszą e-mailową lëstã.
+Mómë Cë wësłóné pòcwierdzenié e-mailã. Terô klëkni na dostóny lënk, ë pòcwierdzë subskripcjô na naszą e-mailową lëstã.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -70,11 +70,11 @@ Fòrmat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-Jes ju fardich! <span>Czekôjże, mòże dëcht jesz ni</span>
+Jes ju fardich! <span>Czekôjże, mòże dëcht jesz nié</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Brëkùjesz przënôleżnëch jinfòrmacji? Rzekni nama përznã wicy ò se. A że ju jes na ti stronie, zapiszë sã téż na jiné wëdowiédzë òd Mozillë.
+Brëkùjesz przënôleżnëch jinfòrmacji? Rzekni nama përznã wicy ò se. A że ju jes na ti stronie, zapiszë sã téż na jiné wëdowiédze òd Mozillë.
 
 
 ;Firefox & You
@@ -82,7 +82,7 @@ Firefox ë Të
 
 
 ;Our Other Newsletters:
-Naszé jiné òbznajmniczi:
+Jiné òbznajmniczi:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
@@ -102,7 +102,7 @@ Jinfòrmacje ò wersji Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Czëtôj ò nônowszich fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkażą jich finalné wersje.
+Czëtôj ò nônowszich fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkaże jich finalnô wersja.
 
 
 ;Let’s Be Friends!
@@ -114,11 +114,11 @@ Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Sprôwiôj <span>Subskripcjô do Gazétów</span>
+Sprôwiôj <span>Subskripcje Gazétów</span>
 
 
 ;Subscribe
-Subskripcjô
+Zapiszë sã
 
 
 ;Unsubscribe
@@ -130,7 +130,7 @@ Zacéchùjë tuwò, żlë chcesz bëc rëmniãti z e-mailowi lëstë Mozillë
 
 
 ;Remove me from all Mozilla emails
-Rëmôj mie z e-mailowi lëstë Mozillë
+Rëmni mie z e-mailowi lëstë Mozillë
 
 
 ;Save Preferences
@@ -162,7 +162,7 @@ Waju e-mailë sã cãżkò czëtô.
 
 
 ;I didn't sign up for this.
-Jô sã ne wiadła nie zpisywôł.
+Jô sã na ne wiadła nie zpisywôł.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
