--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -2,27 +2,27 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Zabierzë Firefoksa met ze sobą! Slédny Firefox dlô Androida je ju wëdóny ë żdô na Ce. <a href="%s">Zladëjë gò ju terô.</a>
+Zabierzë Firefoksa met ze sobą! Slédny Firefox dlô Androida je ju wëdóny ë żdô na Ce. <a href="%s">Zladëjë gò.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Terô, żlë ju môsz nônowszą wersjã, <a href="%s">òbaczë co jidze zrobic</a> w Firefoksu.
+Terô, czéj ju môsz nônowszą wersjã, <a href="%s">òbaczë co jidze zrobic</a> w Firefoksu.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-Jesz ni môsz nônowszi wersji Firefoksa. <a href="%s">Zaktualizëjë gò dzysô</a> bë wëdostac co nôlepszé z sécë!
+Ni môsz nônowszi wersji Firefoksa. <a href="%s">Zaktualni gò dzysô</a> bë wëdostac co nôlepszé z sécë!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Jakno pierszi, wëpróbùjë nônowszé fùnkcje Firefoksa zamkłé w <a href="%s">Aurorze</a>.
+Pierszi wëpróbùjë nônowszé fùnkcje Firefoksa zamkłé w <a href="%s">Aurorze</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Òbaczë ju dzysô jak wëzdrzi przińdny Firefox. <a href="%s">Zladëjë Firefox Aurora</a> ë przetestëjë nônowszé fùnkcje Firefoksa.
+Òbaczë ju dzysô jak przińdny Firefox bądze wëzdrzôł. <a href="%s">Zladëjë Firefox Aurora</a> ë przetestëjë nônowszé fùnkcje Firefoksa.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Przed finalnym wëdanim Firefoksa je Beta, a przed Betą je Aurora. <a href="%s">Wëpróbùjë Firefox Aurora</a> ju terô, bë wëpróbòwac nônowszé z nônowszich fùnkcjów.
+Przed finalnym wëdanim Firefoksa je Beta, a przed Betą je Aurora. <a href="%s">Wëpróbùjë Firefox Aurora</a> ju terô, bë wëpróbòwac nônowszé z nônowszëch fùnkcjów.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
@@ -34,7 +34,7 @@ Bùszny że wcyg je non-profit, Firefox je w sztądze wprowadzac dlô Cë nowacz
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Chùtczi, elasticzny ë bezpieczny, Firefox je jedurnym przezérnikã dze Të jes nôwôżniészi. <a href="%s">Wicy wëdowiédzë/a> ò tim, dlôcze jesmë ùmëslno jinyma.
+Chùtczi, elasticzny ë bezpieczny, Firefox je jedurnym przezérnikã dze Të, brëkòwnik jes nôwôżniészi. <a href="%s">Wicy wëdowiédzë/a> ò tim, dlôcze jesmë jiny.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
@@ -54,11 +54,11 @@ Za wiele kôrtów? Ùpòrządkùjë swój przezérnik przë ùżëcym <a href="%
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-Brëkòwnicë Firefoksa sã różnią midzy sobą. <a href="%s">Dołożë knąpë do przezérnika</a> abò rëmôj te, chtërnëch nie brëkùjesz. Klëkni prawą knąpą na "dodóm" ë biéj do Dopasëjë.
+Brëkòwnicë Firefoksa sã różnią midzy sobą. <a href="%s">Dołożë knąpë do przezérnika</a> abò rëmôj te, chtërnëch nie brëkùjesz. Klëkni prawą knąpą na "dodóm" ë wëbierzé Dopasëjë.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Ùstrojë Firefoksa Personama. Najedzë mëszą, bë je przezdrzec. Zacwierdzë, żlë chcesz spamiãtac swój wëbiérk. Abò biéj do <a href="%s">galerii</a> bë wëpróbòwac tësãcé jinëch!
+Ùstrojë Firefoksa Personama. Najedzë mëszą, bë je przezdrzec. Zacwierdzë, bë spamiãtac swój wëbiérk. Abò biéj do <a href="%s">galerii</a> bë wëpróbòwac tësãcé jinëch!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
@@ -70,7 +70,7 @@ Wëpróbùjë nônowszé fùnkcje, nigle wdostaną sã do wersji Beta. <a href="
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Zladëjë gò ju terô, miec cësk na przińdnotã Firefoksa. <a href="%s">Zladëjë Firefox Aurora.</a>
+Zladëjë gò ë miej cësk na przińdnotã Firefoksa. <a href="%s">Zladëjë Firefox Aurora.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
@@ -78,7 +78,7 @@ Firefox dlô systemù Android je terô specjalno pòdrëchtowóny dlô tabletów
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Zladëjë Firefoksa na Androida ë wezni sprawë sécë w swòje rãcé. <a href="%s">Zladëjë gò ju terô</a>.
+Zladëjë Firefoksa na Androida ë wezni sprawë sécë w swòje rãcé. <a href="%s">Zladënk</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
@@ -90,11 +90,11 @@ Wëpróbùjë fùnkcje, pòdrëchtùjë je ë pòmòżë nama ùdobrzëc przińd
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Widzy Cë sã Firefox? Chcesz pòmòc w ùdobrzenim przińdny wersji? <a href="%">Zladëjë Firefox Beta</a> ë zarô dô nama znac co mëslisz!
+Widzy Cë sã Firefox? Chcesz pòmòc w ùdobrzenim przińdny wersji? <a href="%">Zladëjë Firefox Beta</a> ë dô nama znac co mëslisz!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Môsz ju wjinstalowóné nônowszą wersjã Beta? <a href="%">Zladëjë ją terô</a> ë pòmòżë nama przetestowac nônowszé fùnkcje.
+Môsz ju wjinstalowóné nônowszą wersjã Beta? <a href="%">Zladëjë ją</a> ë pòmòżë nama przetestowac nônowszé fùnkcje.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
@@ -118,15 +118,15 @@ Zaprosë swòjich drëchów do przezdrzeniô przińdnëch fùnkcjów Firefoksa. 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Môsz Firefoksa na wicy jak jednym kòmpùtrze? Terô mòżesz synchronizowac dodôwczi dodôwczi midzy nima. <a href="%">Czëtôj wicy ò tim jak włączëc fùnkcjã Sync.</a>
+Môsz Firefoksa na wicy jak jednym kòmpùtrze? Terô mòżesz synchronizowac dodôwczi midzy nima. <a href="%">Czëtôj wicy ò tim jak włączëc fùnkcjã Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Chùtczi, chùtczészi. <a %s>Firefox dlô Androida tëli co òstał zaktualniony</a>. Pòmòżë nama ò tim rozgłosëc.
+Chùtczi, chùtczészi, nôchùtczészi. <a %s>Firefox dlô Androida òstał zaktualniony</a>. Pòmòżë nama ò tim rozgłosëc.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox ùmòżlëwiô chùtczészi przistãp do fùnkcji! <a href="%">Òbezdrzi wideò bë wëwiedzëc sã wicy.</a>
+Firefox ùmòżlëwiô chùtczészi przistãp do fùnkcji! <a href="%">Òbezdrzë wideò bë wëwiédzëc sã wicy.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
@@ -134,7 +134,7 @@ Widzy Cë sã wersjô Beta? <a href="%s">Rôczë swòjich drëchów ë znajomich
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszich fùnkcji, chtërné wnet òstaną wprowadzoné do Firefoksa. <a href="%s">Òbôczë tuwò</a>.
+Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszé fùnkcjé, chtërné mają bëc wprowadzoné do Firefoksa. <a href="%s">Sprôwdzë</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
@@ -142,6 +142,6 @@ Ceszã sã, że môsz wëpróbòwóné wersjã Beta, co mama pòmòże w pòpraw
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszich fùnkcji, chtërné wnet bãdą wprowadzoné do Firefoksa. <a href="%s">Kònieczno gò téż przetestùjë</a>.
+Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszé fùnkcje, chtërné mają bëc wprowadzoné do Firefoksa. <a href="%s">Kònieczno gò téż przetestëjë</a>.
 
 
