--- a/csb/upgradedialog.lang
+++ b/csb/upgradedialog.lang
@@ -7,7 +7,7 @@ Zladëjë nônowszégò Firefoksa
 
 
 ;The Newest Firefox is Here!
-Nônowszi Firefox ju je przistãpny!
+Pòkôza sã nowszô wersjô Firefoksa!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -23,4 +23,4 @@ Swiérzi,  nowi wëzdrzatk
 
 
 ;More awesomeness than ever
-Wicy mòżlëwòscy niż czedëkòlwiek
+Wicy mòżlëwòsców niż czedëkòlwiek
