--- a/csb/videos/video_fx13.lang
+++ b/csb/videos/video_fx13.lang
@@ -3,7 +3,7 @@
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-Z nową domôcą stroną, je lżi przistãp do nôpòpùlarniészëch òptacji.
+Z nową domôcą stroną, môsz lżiszi przistãp do nôpòpùlarniészëch òptacji.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
@@ -27,11 +27,11 @@ Nowô kôrta terô wëskrzëniwô miniaturë nôpòpùlarniészëch ë òstatnio
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-Mòżesz do se dopasowac kôrtë, zmieniwającë szëk miniatur, przez jich przecyganié.
+Mòżesz do se dopasowac kôrtë, zmieniwającë szëk miniatur prosto przez jich przecyganié.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Klëkni na pieskã bë stronã òsta na placu, abò klëkni na 'X', bë rëmnąc stronã.
+Klëkni na pieskã ë stronã òsta na placu, abò klëkni na 'X', bë ją rëmnąc.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
@@ -39,5 +39,5 @@ Mòżesz téż klëknąc na jikònã 'grid' ù górë pò prawi stronie, bë dos
 
 
 ;Get the latest Firefox now and start using these new features today!
-Scygni nônowszą wersjã Firefoksa bë rozpòcząc ùżëwanié tich fùnkcji!
+Scygni nônowszą wersjã Firefoksa ë rozpòczni ùżëwónié tich fùnkcji!
 
