--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -18,7 +18,7 @@ Nie jesmë gwës wersji Twòjégò Firefoksa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-Dlô bezpiekù, zamòdliwómë scygnienié <a href="{url}">nônowszi, nôlepszi wersji</a>.
+Dlô bezpiekù, zamòdliwómë scygniãcé <a href="{url}">nônowszi, nôlepszi wersji</a>.
 
 
 ;Get to your next task<br/>faster than ever
@@ -26,7 +26,7 @@ Przechòdzë z fùnkcji na fùnkcją<br/>chùdzy niżlë czédës
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Sprawdzë, jak nowé fùnkcje Firefoksa mògą pòmóc w chùtczészim ë efektiwniészim przezéranim.
+Sprawdzë, jak nowé fùnkcje Firefoksa mògą pòmóc w chùtczészim ë efektiwniészim przezéranim sécy.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -38,7 +38,7 @@ Czëtôj wicy ò <a href="{url}">naszi nowi domôcy stronie »</a>
 
 
 ;Keep in touch
-Ùtrzëmùje łączbã
+Ùtrzëmùjë łączbã
 
 
 ;Keep it moving
@@ -66,7 +66,7 @@ Robòt Androida je òpiarti na zdroju <a href="%s">Googla</a> ë je ùżëwóny 
 
 
 ;Now get the mobile browser that’s got your back
-Scygni mobilny przezérnik na chtërnym mòżesz spòlegac.
+Scygni mobilny przezérnik na chtërnym mòżesz spòlégac.
 
 
 ;Firefox Features
