l10n: bug 788029, Swedish update by  Mikael Hiort af Ornäs
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108855 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/main.lang
+++ b/sv-SE/main.lang
@@ -91,7 +91,7 @@ Andra språk:
 
 
 ;All rights reserved.
-Alla rättigheter förbehållna.
+Med ensamrätt.
 
 
 ;Legal Notices
@@ -211,7 +211,7 @@ Megabyte
 
 
 ;FAQ
-FAQ {ok}
+Vanliga frågor och svar
 
 
 ;Videos
@@ -408,11 +408,11 @@ Enheter som stöds
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Nyheter
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Sekretess
 
 
