--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -126,23 +126,23 @@ Snabbt, snabbt, snabbt. <a %s>Firefox för Android har precis uppgraderats rejä
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox har nya funktioner som låter dig komma igång med nästa uppgift ännu snabbare! <a href="%">Titta på videon för att få veta mer.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Älskar du Firefox Beta? <a href="%s">Bjud in dina vänner</a> till en smygtitt på det som snart kommer till Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Jag använder Firefox Beta för att få en smygtitt på de nya funktioner och nyheter som snart kommer till Firefox. <a href="%s">Se själv</a>!
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Tack för att du använder Firefox Beta och hjälper till att göra Firefox ännu mer fantastisk. <a href="%s">Bjud in dina vänner</a> att testa de också.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Jag använder Firefox Beta för att hjälpa till att testa de senaste funktionerna göra Firefox ännu mer fantastisk. <a href="%s">Testa du också</a>!
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
