--- a/sv-SE/whatsnew.lang
+++ b/sv-SE/whatsnew.lang
@@ -62,38 +62,38 @@ Android-roboten är reproducerad från ett arbete skapat och <a href="%s">delat 
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Hämta Firefox för Android</a> och placera makten över webben i dina händer. Den är snabb, smart och säker!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Hämta mobilwebbläsaren som är på din sida
 
 
 ;Firefox Features
-Firefox Features
+Funktioner i Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Välkommen till Firefox
 
 
 ;Firefox Help
-Firefox Help
+Hjälp om Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Grafik för Firefox för Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Snabb. Smart. Säker.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Hämta mobilwebbläsaren som är på din sida.
 
 
