fr, corrected a typo
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108865 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/marketplace/partners.lang
+++ b/fr/marketplace/partners.lang
@@ -43,7 +43,7 @@ Marketplace de Mozilla — <em>Ouverture imminente</em>
 
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Avant son lancement public cette année, Mozilla va ouvrir son Marketplace aux test utilisateurs. Profitez-en pour être parmi les premiers développeurs d'applications à se faire connaître et conquérir des utilisateurs. Soumettez votre application pour&nbsp;:
+Avant son lancement public cette année, Mozilla va ouvrir son Marketplace aux tests utilisateurs. Profitez-en pour être parmi les premiers développeurs d'applications à se faire connaître et conquérir des utilisateurs. Soumettez votre application pour&nbsp;:
 
 ;Test your app with a committed group of early adopters.
 La tester grâce à un groupe d'utilisateurs précoces passionnés.
