Bug 774138 - [l10n: ff] updated whatsnew.lang file for www.mozilla.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108875 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -1,6 +1,8 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
+
+
 ;Hooray! Your Firefox is up to date.
-Haayoo! Firefox maa hesɗitii haŋkadi.
+Haayoo! Firefox maa hesɗitii.
 
 
 ;Your Firefox is out of date.
@@ -43,7 +45,7 @@ Jooni golle maa <br/>ɓeydoo yaawde
 Ɓeydo dillude
 
 
-;Get Firefox » <b>for Android</b>
+;Get Firefox » <b>for Android</b>
 Heɓ Firefox » <b>mo Android</b>
 
 
@@ -60,11 +62,11 @@ Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondir
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, ena yuɓɓi, ena hisi!
+<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, e,a yuɓɓi, ena hisi!
 
 
 ;Now get the mobile browser that’s got your back
-Jooni heɓ wanngorde cinndel ko nafoore mehre-mehre
+Jooni heɓ wanngorde cinndel wona nafoore maa
 
 
 ;Firefox Features
@@ -87,9 +89,11 @@ Natal Firefox mo Android
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Jaawɗum. Juɓɓuɗum. Kisɗum.
+Jaawɗum. Juɓɓuɗum. Kisaɗum.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Heɓ wanngorde cinndel ko nafoore mehre-mehre.
+Geɓ wanngorde cinndel wona nafoore maa.
+
+
