--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -30,7 +30,7 @@ Prije Firefoxa postoji Beta, a prije Bete postoji Aurora. <a href="%s">Probajte 
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox je s ponosnom neprofitan i slobodan je inovirati u vaše ime bez kompromisa. <a href="%s">Saznajte više</a> o našoj misiji.
+Firefox je s ponosom neprofitan i slobodan je inovirati u vaše ime bez kompromisa. <a href="%s">Saznajte više</a> o našoj misiji.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
